# gads-data-layer

./: .coveragerc  .gitattributes  .gitignore  CODE_CLEANUP_GUIDE.md  DASHBOARD_PROJECT_PLAN.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PROJECT_ROADMAP.md  README.md  SECURITY.md  _2word_neg_pages.py  _3word_neg_audit.py  _5word_neg_audit.py  _check_negs_vs_new_campaign.py  _check_today_triage.py  _dii_adgroup_audit.py  _kw_check.py  _pmax_near_me.py  _pmax_near_me_buckets.py  _rsa_audit.py  _t.py  build_ad_features_direct.py  build_call_deck_21apr.py  build_call_deck_v2.py  build_call_deck_v3_clean.py  build_keyword_features.py  build_product_features.py  build_product_features_simple.py  check_absolute_flags.py  check_action_type.py  check_bid_rules.py  check_bid_rules2.py  check_campaign_names.py  check_clients.py  check_columns.py  check_data.py  check_db.py  check_db2.py  check_db_recs.py  check_duplicates_detail.py  check_engine_date.py  (+91 more)
.claude/: settings.local.json
act_alerts/: README.md  __init__.py  cli.py  email_sender.py
act_autopilot/: __init__.py  __main__.py  approval_cli.py  campaign_metadata.py  change_log.py  cli.py  config_validator.py  engine.py  executor.py  google_ads_api.py  guardrails.py  logging_config.py  models.py  radar.py  recommendations_engine.py  rules_config.json  suggest_engine.py
act_dashboard/: __init__.py  app.py  auth.py  cache.py  celery_app.py  config.py  config_validator.py  email_sender.py  outreach_poller.py  queue_scheduler.py  routes.py  routes_old.py  utils.py  validation.py
act_lighthouse/: __init__.py  ad_diagnostics.py  (+11 more)
(+1157 files in other folders)
